--- a/MyAPI/MyAPI.vcxproj
+++ b/MyAPI/MyAPI.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="AirLeft.h" />
     <ClInclude Include="Beam.h" />
     <ClInclude Include="BrontoBurt.h" />
+    <ClInclude Include="Bros.h" />
     <ClInclude Include="Commoninclude.h" />
     <ClInclude Include="EnergyBeam.h" />
     <ClInclude Include="framework.h" />
@@ -172,6 +173,7 @@
     <ClInclude Include="MyKirby.h" />
     <ClInclude Include="MyLayer.h" />
     <ClInclude Include="MyMath.h" />
+    <ClInclude Include="Room3.h" />
     <ClInclude Include="Stage1_1.h" />
     <ClInclude Include="MyResource.h" />
     <ClInclude Include="MyScene.h" />
@@ -185,9 +187,15 @@
     <ClInclude Include="Stage1_1bk.h" />
     <ClInclude Include="Stage1_2.h" />
     <ClInclude Include="Stage1_2bk.h" />
+    <ClInclude Include="Stage1_3.h" />
+    <ClInclude Include="Stage1_3bk.h" />
+    <ClInclude Include="Stage2Pt.h" />
     <ClInclude Include="Star.h" />
     <ClInclude Include="StarMap.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TreeBK.h" />
+    <ClInclude Include="TreeScene.h" />
+    <ClInclude Include="TreeStage.h" />
     <ClInclude Include="Ttitle.h" />
   </ItemGroup>
   <ItemGroup>
@@ -197,6 +205,7 @@
     <ClCompile Include="AirLeft.cpp" />
     <ClCompile Include="Beam.cpp" />
     <ClCompile Include="BrontoBurt.cpp" />
+    <ClCompile Include="Bros.cpp" />
     <ClCompile Include="EnergyBeam.cpp" />
     <ClCompile Include="HP.cpp" />
     <ClCompile Include="KirbyBeam.cpp" />
@@ -228,6 +237,7 @@
     <ClCompile Include="MyKirby.cpp" />
     <ClCompile Include="MyLayer.cpp" />
     <ClCompile Include="MyMath.cpp" />
+    <ClCompile Include="Room3.cpp" />
     <ClCompile Include="Stage1_1.cpp" />
     <ClCompile Include="MyResource.cpp" />
     <ClCompile Include="MyScene.cpp" />
@@ -240,8 +250,14 @@
     <ClCompile Include="Stage1_1bk.cpp" />
     <ClCompile Include="Stage1_2.cpp" />
     <ClCompile Include="Stage1_2bk.cpp" />
+    <ClCompile Include="Stage1_3.cpp" />
+    <ClCompile Include="Stage1_3bk.cpp" />
+    <ClCompile Include="Stage2Pt.cpp" />
     <ClCompile Include="Star.cpp" />
     <ClCompile Include="StarMap.cpp" />
+    <ClCompile Include="TreeBK.cpp" />
+    <ClCompile Include="TreeScene.cpp" />
+    <ClCompile Include="TreeStage.cpp" />
     <ClCompile Include="Ttitle.cpp" />
   </ItemGroup>
   <ItemGroup>
