--- a/MyAPI/MyAPI.vcxproj
+++ b/MyAPI/MyAPI.vcxproj
@@ -155,6 +155,9 @@
     <ClInclude Include="MyCollisionManager.h" />
     <ClInclude Include="MyfadeIn.h" />
     <ClInclude Include="MyfadeOut.h" />
+    <ClInclude Include="Portion1.h" />
+    <ClInclude Include="portion2.h" />
+    <ClInclude Include="portion3.h" />
     <ClInclude Include="R1Ground.h" />
     <ClInclude Include="MyObject.h" />
     <ClInclude Include="MyRectangle.h" />
@@ -174,6 +177,8 @@
     <ClInclude Include="MyLayer.h" />
     <ClInclude Include="MyMath.h" />
     <ClInclude Include="Room3.h" />
+    <ClInclude Include="SecretRoom.h" />
+    <ClInclude Include="SecretRoomScene.h" />
     <ClInclude Include="Stage1_1.h" />
     <ClInclude Include="MyResource.h" />
     <ClInclude Include="MyScene.h" />
@@ -222,6 +227,9 @@
     <ClCompile Include="MyCollider.cpp" />
     <ClCompile Include="MyfadeIn.cpp" />
     <ClCompile Include="MyfadeOut.cpp" />
+    <ClCompile Include="Portion1.cpp" />
+    <ClCompile Include="portion2.cpp" />
+    <ClCompile Include="portion3.cpp" />
     <ClCompile Include="R1Ground.cpp" />
     <ClCompile Include="MyRectangle.cpp" />
     <ClCompile Include="MyRigidBody.cpp" />
@@ -238,6 +246,8 @@
     <ClCompile Include="MyLayer.cpp" />
     <ClCompile Include="MyMath.cpp" />
     <ClCompile Include="Room3.cpp" />
+    <ClCompile Include="SecretRoom.cpp" />
+    <ClCompile Include="SecretRoomScene.cpp" />
     <ClCompile Include="Stage1_1.cpp" />
     <ClCompile Include="MyResource.cpp" />
     <ClCompile Include="MyScene.cpp" />
