--- a/MyAPI/MyAPI.vcxproj
+++ b/MyAPI/MyAPI.vcxproj
@@ -136,11 +136,13 @@
     <ClInclude Include="AirLeft.h" />
     <ClInclude Include="Beam.h" />
     <ClInclude Include="BoomBros.h" />
+    <ClInclude Include="boomrect.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="BrontoBurt.h" />
     <ClInclude Include="Bros.h" />
     <ClInclude Include="Commoninclude.h" />
     <ClInclude Include="EnergyBeam.h" />
+    <ClInclude Include="Explosion.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Grizzo.h" />
     <ClInclude Include="HP.h" />
@@ -223,10 +225,12 @@
     <ClCompile Include="AirLeft.cpp" />
     <ClCompile Include="Beam.cpp" />
     <ClCompile Include="BoomBros.cpp" />
+    <ClCompile Include="boomrect.cpp" />
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="BrontoBurt.cpp" />
     <ClCompile Include="Bros.cpp" />
     <ClCompile Include="EnergyBeam.cpp" />
+    <ClCompile Include="Explosion.cpp" />
     <ClCompile Include="Grizzo.cpp" />
     <ClCompile Include="HP.cpp" />
     <ClCompile Include="KirbyBeam.cpp" />
