--- a/MyAPI/MyAPI.vcxproj.filters
+++ b/MyAPI/MyAPI.vcxproj.filters
@@ -158,9 +158,6 @@
     <Filter Include="Contents\SaveKirby">
       <UniqueIdentifier>{433d63ba-a472-4957-a910-22ad943c3ee6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Contents\Skill\BoombKirbySkill">
-      <UniqueIdentifier>{c687bf76-ab06-49c7-9f73-d656b186045b}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Contents\Skill\AbsorbEffect">
       <UniqueIdentifier>{9ab1eb29-ba68-4b95-bd76-4bc1d03ab986}</UniqueIdentifier>
     </Filter>
@@ -172,6 +169,9 @@
     </Filter>
     <Filter Include="Contents\Skill\KirbyBoom">
       <UniqueIdentifier>{09fc860e-5550-43f1-a67f-dd7517147274}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Contents\Skill\BrosBoom">
+      <UniqueIdentifier>{c687bf76-ab06-49c7-9f73-d656b186045b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -414,16 +414,10 @@
       <Filter>Contents\SaveKirby</Filter>
     </ClInclude>
     <ClInclude Include="RightBoomb.h">
-      <Filter>Contents\Skill\BoombKirbySkill</Filter>
+      <Filter>Contents\Skill\BrosBoom</Filter>
     </ClInclude>
     <ClInclude Include="LeftBoomb.h">
-      <Filter>Contents\Skill\BoombKirbySkill</Filter>
-    </ClInclude>
-    <ClInclude Include="RightZoom.h">
-      <Filter>Contents\Skill\BoombKirbySkill</Filter>
-    </ClInclude>
-    <ClInclude Include="LeftZoom.h">
-      <Filter>Contents\Skill\BoombKirbySkill</Filter>
+      <Filter>Contents\Skill\BrosBoom</Filter>
     </ClInclude>
     <ClInclude Include="BoomBros.h">
       <Filter>Contents\Monster\Bros</Filter>
@@ -436,6 +430,12 @@
       <Filter>Contents\Skill\KirbyBoom</Filter>
     </ClInclude>
     <ClInclude Include="KirbyLeftBoom.h">
+      <Filter>Contents\Skill\KirbyBoom</Filter>
+    </ClInclude>
+    <ClInclude Include="LeftZoom.h">
+      <Filter>Contents\Skill\KirbyBoom</Filter>
+    </ClInclude>
+    <ClInclude Include="RightZoom.h">
       <Filter>Contents\Skill\KirbyBoom</Filter>
     </ClInclude>
   </ItemGroup>
@@ -671,16 +671,10 @@
       <Filter>Contents\SaveKirby</Filter>
     </ClCompile>
     <ClCompile Include="RightBoomb.cpp">
-      <Filter>Contents\Skill\BoombKirbySkill</Filter>
+      <Filter>Contents\Skill\BrosBoom</Filter>
     </ClCompile>
     <ClCompile Include="LeftBoomb.cpp">
-      <Filter>Contents\Skill\BoombKirbySkill</Filter>
-    </ClCompile>
-    <ClCompile Include="RightZoom.cpp">
-      <Filter>Contents\Skill\BoombKirbySkill</Filter>
-    </ClCompile>
-    <ClCompile Include="LeftZoom.cpp">
-      <Filter>Contents\Skill\BoombKirbySkill</Filter>
+      <Filter>Contents\Skill\BrosBoom</Filter>
     </ClCompile>
     <ClCompile Include="BoomBros.cpp">
       <Filter>Contents\Monster\Bros</Filter>
@@ -693,6 +687,12 @@
       <Filter>Contents\Skill\KirbyBoom</Filter>
     </ClCompile>
     <ClCompile Include="KirbyRightBoom.cpp">
+      <Filter>Contents\Skill\KirbyBoom</Filter>
+    </ClCompile>
+    <ClCompile Include="LeftZoom.cpp">
+      <Filter>Contents\Skill\KirbyBoom</Filter>
+    </ClCompile>
+    <ClCompile Include="RightZoom.cpp">
       <Filter>Contents\Skill\KirbyBoom</Filter>
     </ClCompile>
   </ItemGroup>
